# ConicOptimization

./: .gitignore  CMakeLists.txt  README.md  clang_format.sh
src/: CMakeLists.txt  Logger.hpp  OperatorSplittingConicSolver.hpp  Problem.hpp  ProblemGeneration.hpp  main.cpp
src/Core/: PrimalDualPoints.hpp  Projections.hpp  Residuals.hpp
